Fix Checkbox z-index

--- a/source/Checkbox.css
+++ b/source/Checkbox.css
@@ -51,6 +51,7 @@
 .rrui__checkbox__checkbox
 {
 	position    : relative;
+	z-index     : 0;
 	flex-shrink : 0;
 	width       : var(--rrui-checkbox-size);
 	height      : var(--rrui-checkbox-size);
